--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,18 @@
 abstract: XMLRPC Model Class for Catalyst
-author: 'Florian Merges <fmerges@cpan.org>'
-build_requires:
+author: Florian Merges <fmerges@cpan.org>
+build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.63
+generated_by: Module::Install version 0.64
 license: perl
 name: Catalyst-Model-XMLRPC
-no_index:
-  directory:
+no_index: 
+  directory: 
     - inc
     - t
-requires:
+requires: 
   Catalyst: 0
   Catalyst::Devel: 0
   NEXT: 0
   RPC::XML: 0
-version: 0.03
+version: 0.04
